@@ -1,3 +1,14 @@
+2018-01-17  Devin Rousso  <webkit@devinrousso.com>
+
+        Web Inspector: clicking on a path component that has no siblings should select it
+        https://bugs.webkit.org/show_bug.cgi?id=181772
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Views/HierarchicalPathComponent.js:
+        (WI.HierarchicalPathComponent.prototype._updateSelectElement):
+        (WI.HierarchicalPathComponent.prototype._selectElementMouseDown):
+
 2018-01-17  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: Add back localized strings for Styles sidebar panels
